--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,7 +621,7 @@ section {
 }
 
 .gallery .owl-dot.active {
-  background-color: #5777ba !important;
+  background-color: #FF4081 !important;
 }
 
 .gallery .gallery-carousel {
@@ -634,9 +634,9 @@ section {
 
 @media (min-width: 992px) {
   .gallery .gallery-carousel .center {
-    border: 6px solid #5777ba;
+    border: 6px solid #FF4081;
     padding: 4px;
-    background: #fff;
+    background: #000;
     z-index: 1;
     transform: scale(1.2);
     margin-top: 10px;
